--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -4,10 +4,10 @@ LDFLAGS =
 
 all: kernel kernel.elf
 
-kernel.elf: kernel.o segmentation.o hardware.o load_gdt.o font.o sched.o interrupt.o interrupt_handler.o lapic_timer.o syscall.o memory.o util.o pm_timer.o port_io.o sched_control.o
+kernel.elf: kernel.o segmentation.o hardware.o load_gdt.o font.o sched.o interrupt.o interrupt_handler.o lapic_timer.o syscall.o memory.o util.o pm_timer.o port_io.o sched_control.o virtio.o
 	ld $(LDFLAGS) -T kernel.elf.ld -o $@ $+
 
-kernel: kernel.o segmentation.o hardware.o load_gdt.o font.o sched.o interrupt.o interrupt_handler.o lapic_timer.o syscall.o memory.o util.o pm_timer.o port_io.o sched_control.o
+kernel: kernel.o segmentation.o hardware.o load_gdt.o font.o sched.o interrupt.o interrupt_handler.o lapic_timer.o syscall.o memory.o util.o pm_timer.o port_io.o sched_control.o virtio.o
 	ld $(LDFLAGS) -T kernel.ld -o $@ $+
 
 %.o: %.c
